[http] support multiple parameters with same key (#897)